--- a/Asp_Net_MVC/Views/Home/UsingStronglyType.cshtml
+++ b/Asp_Net_MVC/Views/Home/UsingStronglyType.cshtml
@@ -1,18 +1,19 @@
-﻿@model Asp_Net_MVC.Models.Employee
+﻿@*@model Asp_Net_MVC.Models.Employee*@
+@model Asp_Net_MVC.ViewModels.HomeDetailsViewModel
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title></title>
 </head>
 <body>
-    <h3>@ViewBag.PageTitle</h3>
+    <h3>@Model.PageTitle</h3>
     <div>
-        Name: @Model.Name;
+        Name: @Model.Employee.Name;
     </div>
     <div>
-        Name: @Model.Email;
+        Name: @Model.Employee.Email;
     </div>
     <div>
-        Name: @Model.Department;
+        Name: @Model.Employee.Department;
     </div>
 </body>
 </html>
