--- a/Asp_Net_MVC/Views/Home/UsingStronglyType.cshtml
+++ b/Asp_Net_MVC/Views/Home/UsingStronglyType.cshtml
@@ -1,5 +1,5 @@
 ﻿@*@model Asp_Net_MVC.Models.Employee*@
-@model Asp_Net_MVC.ViewModels.HomeDetailsViewModel
+@model HomeDetailsViewModel
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title></title>
