--- a/Asp_Net_MVC/Views/Home/Details.cshtml
+++ b/Asp_Net_MVC/Views/Home/Details.cshtml
@@ -1,8 +1,5 @@
-﻿<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body>
-    <h1>Details.cshtml from Views/Home folder</h1>
-</body>
-</html>
+﻿@{
+    Layout = "_Layout2";
+    ViewBag.Title = "Test Page";
+ }
+ <h1>Details.cshtml from Views/Home folder</h1>
