--- a/Asp_Net_MVC/Views/Home/Index.cshtml
+++ b/Asp_Net_MVC/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
     //ViewStart page will do this automatically
     ViewBag.Title = "Employees List";
 }
-<table>
+@*<table>
     <thead>
         <tr>
             <th>ID</th>
@@ -24,7 +24,27 @@
         }
     </tbody>
 
-</table>
+</table>*@
+<div class="card-deck">
+    @foreach (var employee in Model)
+    { 
+        <div class="card m-3">
+            <div class="card-header">
+                <h3>@employee.Name</h3>
+            </div>
+            <img class="card-img-top" src="~/images/noImage.jpg" asp-append-version="true" />
+            <div class="card-footer text-center">
+                @*<a href="/home/details/@employee.Id" class="btn btn-primary">View</a>
+                @Html.ActionLink("View","details","home",new {id = employee.Id })
+                <a href="@Url.Action("details", "home", new {id = employee.Id })"  class="btn btn-primary">View</a>*@
+                <a asp-controller="home" asp-action="details"  asp-route-id="@employee.Id" class="btn btn-primary m-1">View</a>
+                <a href="#" class="btn btn-primary m-1">Edit</a>
+                <a href="#" class="btn btn-danger m-1">Delete</a>
+            </div>
+        </div>
+    }
+</div>
+
 @section Scripts{
     <script src="~/js/CustomScript.js"></script>
 }
