--- a/Asp_Net_MVC/Views/Home/Details.cshtml
+++ b/Asp_Net_MVC/Views/Home/Details.cshtml
@@ -1,5 +1,8 @@
 ﻿@model HomeDetailsViewModel 
-
+@{ 
+    ViewBag.Title = "Employee Details";
+    var photoPath = "~/images/" + (Model.Employee.PhotoPath ?? "noimage.jpg");
+}
 <h3>@Model.PageTitle</h3>
 @*<div>
     Name : @Model.Employee.Name
@@ -16,7 +19,7 @@
                 <h1>@Model.Employee.Name</h1>
             </div>
             <div class="card-body text-center">
-                <img class="card-img-top" src="~/images/noImage.jpg" asp-append-version="true" />
+                <img class="card-img-top" src="@photoPath" asp-append-version="true" />
                 <h4>Employee Id : @Model.Employee.Id</h4>
                 <h4>Email : @Model.Employee.Email</h4>
                 <h4>Department : @Model.Employee.Department</h4>
