Nlog config file

--- a/Asp_Net_MVC/Views/Shared/Error.cshtml
+++ b/Asp_Net_MVC/Views/Shared/Error.cshtml
@@ -1,5 +1,5 @@
 ﻿<h3>Exception Details</h3>
-<div class="alert alert-danger">
+@*<div class="alert alert-danger">
     <h5>Exception Path</h5>
     <hr />
     <p>@ViewBag.ExceptionPath</p>
@@ -14,5 +14,5 @@
     <h5>Exception Stack Trace</h5>
     <hr />
     <p>@ViewBag.Stacktrace</p>
-</div>
+</div>*@
 
