--- a/Asp_Net_MVC/Views/Shared/Error.cshtml
+++ b/Asp_Net_MVC/Views/Shared/Error.cshtml
@@ -1,8 +1,16 @@
-﻿<div class="alert alert-danger">
-    <h5>Exception Message</h5>
-    <hr />
-    <p>@ViewBag.ExceptionMessage</p>
-</div>
+﻿@if (ViewBag.ErrorTitle == null)
+{
+    <div class="alert alert-danger">
+        <h5>Exception Message</h5>
+        <hr />
+        <p>@ViewBag.ExceptionMessage</p>
+    </div>
+}
+else
+{ 
+    <h1 class="text-danger">@ViewBag.ErrorTitle</h1>
+    <h6 class="text-danger"> @ViewBag.ErrorMessage</h6>
+}
 
 @*<div class="alert alert-danger">
         <h5>Exception Path</h5>
