change default access denied to administration controller

--- a/Asp_Net_MVC/Views/Administration/ListRoles.cshtml
+++ b/Asp_Net_MVC/Views/Administration/ListRoles.cshtml
@@ -22,10 +22,10 @@
             </div>
             <div class="card-footer">
                 <form asp-action="DeleteRole" asp-route-id="@role.Id" method="post">
-                    @if ((await authorizationService.AuthorizeAsync(User, "EditRolePolicy")).Succeeded)
-                    {
+                    @*@if ((await authorizationService.AuthorizeAsync(User, "EditRolePolicy")).Succeeded)
+                    {*@
                         <a class="btn btn-primary" asp-action="EditRole" asp-controller="Administration" asp-route-id="@role.Id">Edit</a>
-                    }
+                    @*}*@
                     @if ((await authorizationService.AuthorizeAsync(User, "DeleteRolePolicy")).Succeeded)
                     {
                         <span id="confirmDeleteSpan_@role.Id" style="display:none">
