--- a/Asp_Net_MVC/Views/Shared/_Layout.cshtml
+++ b/Asp_Net_MVC/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
                     <li class="nav-item">
                         <a asp-action="create" asp-controller="home" class="nav-link">Create</a>
                     </li>
-                    @if (signInManager.IsSignedIn(User) && User.IsInRole("Administrator"))
+                    @if ((signInManager.IsSignedIn(User) && User.IsInRole("Administrator")) || (signInManager.IsSignedIn(User) && User.IsInRole("Super Admin")))
                     {
                         @*<li class="nav-item">
                             <a asp-action="ListRoles" asp-controller="Administration" class="nav-link">Manage Role</a>
