--- a/BookStore/BookStoreUI/BookStoreUI/Views/Book/GetAllBooks.cshtml
+++ b/BookStore/BookStoreUI/BookStoreUI/Views/Book/GetAllBooks.cshtml
@@ -18,7 +18,7 @@
                         <p class="card-text">@book.Description</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="#" class="btn btn-sm btn-outline-secondary">ViewDetails</a>
+                                <a href="/book/getbook/@book.Id" class="btn btn-sm btn-outline-secondary">ViewDetails</a>
                             </div>
                             <small class="text-muted">@book.Author</small>
                         </div>
@@ -28,3 +28,8 @@
         }
 </div>
 </div>
+@section Scripts{ 
+    <script>
+
+    </script>
+}
