--- a/BookStore/BookStoreUI/BookStoreUI/Views/Shared/_Layout.cshtml
+++ b/BookStore/BookStoreUI/BookStoreUI/Views/Shared/_Layout.cshtml
@@ -46,16 +46,18 @@
     <main role="main">
         @RenderBody()
     </main>
-    <footer class="border-top footer text-muted text-center" >
+    <footer class="border-top footer text-muted text-center">
         <div class="container">
             Copyright &copy; Book Store @DateTime.Now.Year
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    @*<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>*@
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    @*We can place RenderSection in any place in the Layout file and as well we can use 
-    RenderSection to place any type of content*@
+    @*We can place RenderSection in any place in the Layout file and as well we can use
+        RenderSection to place any type of content*@
     @RenderSection("Scripts", required: false)
 </body>
 </html>
